# ecvm

./: .gitignore  CMakeLists.txt  README.md  ecvm.cpp  ecvm.cu
blocks/: CMakeLists.txt  patch_embedding.cpp  transformer_encoder_layer.cpp
core/: CMakeLists.txt  ecvm_core.cpp
datasets/: CMakeLists.txt
datasets/cifar-10/: CMakeLists.txt  cifar-10.cpp
device/: CMakeLists.txt  init.cu
gemm/: CMakeLists.txt  matmul_naive.cu  naive.cu  tiled.cu  tiled_smem.cu
include/ecvm/: ecvm.hpp
include/ecvm/blocks/: patch_embedding.hpp  transformer_encoder_layer.hpp
include/ecvm/core/: ecvm_core.hpp
include/ecvm/datasets/cifar-10/: cifar-10.hpp
include/ecvm/device/: init.cuh
include/ecvm/gemm/: matmul_naive.cuh  naive.cuh  tiled.cuh  tiled_smem.cuh
include/ecvm/metrics/: accuracy.hpp
include/ecvm/models/vit/: vit.hpp
include/ecvm/tensor/: init.cuh  ops.cuh
metrics/: CMakeLists.txt  accuracy.cpp
models/: CMakeLists.txt
models/vit/: CMakeLists.txt  vit.cpp
pipelines/: CMakeLists.txt
pipelines/cifar-10-vit/: CMakeLists.txt  cifar-10-vit.cpp
pipelines/gemm_benchmark/: CMakeLists.txt  gemm_benchmark.cu
tensor/: CMakeLists.txt  init.cu  ops.cu
tests/gemm/: CMakeLists.txt  naive.cu  tiled.cu  tiled_smem.cu
